--- a/css/jggl_hub.css
+++ b/css/jggl_hub.css
@@ -32,7 +32,12 @@
     padding: 0px;
     margin: 0px;
 }
-
-.logo-link {
+a {
+    color: black;
+  }
+a:visited {
+    color: black;
+}
+a:hover {
     color: black;
 }
