--- a/css/jggl_hub.css
+++ b/css/jggl_hub.css
@@ -1,4 +1,4 @@
-.head-hub {
+.topbar-hub {
    background-color: rgb(15, 8, 19);
    width: 100%;
    height: 60px;
@@ -12,14 +12,14 @@
 .logo-hub {
     display: inline-flex;
     margin-left: 15px;
-    margin-top: 0px;
+    margin-top: 5px;
     padding: 0px;
     height: 40px;
     width: 40px;
 }
 .logo-text-hub {
     display: inline-flex;
-    margin-left: 12px;
+    margin-left: 15px;
     margin-top: 0px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 50px;
