--- a/css/jggl_hub.css
+++ b/css/jggl_hub.css
@@ -10,27 +10,29 @@
 }
 
 .logo-hub {
-    display: inline-flex;
+    display: inline;
     margin-left: 15px;
-    margin-top: 5px;
-    padding: 0px;
+    margin-top: 12px;
+    padding: 0%;
     height: 40px;
     width: 40px;
 }
 .logo-text-hub {
-    display: inline-flex;
+    display: inline;
     margin-left: 15px;
     margin-top: 0px;
+    margin-right: 20px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 50px;
+    font-size: 30px;
     color: white;
 
 }
 
 .body-hub {
-    background-color: rgb(40, 35, 43);
+    background-color: rgb(178, 182, 141);
     padding: 0px;
     margin: 0px;
+    display: block;
 }
 a {
     color: rgb(15, 8, 19);
@@ -40,4 +42,49 @@ a:visited {
 }
 a:hover {
     color: rgb(15, 8, 19);
+}
+
+.topbar-shadow {
+    width: 100%;
+    height: 10px;
+    background: linear-gradient(rgb(10, 4, 15), rgba(15, 8, 19, 0.7), rgba(15, 8, 19, 0.2), rgba(15, 8, 19, 0.01));
+}
+
+.topbar-items {
+    display: inline-flex;
+    color: whitesmoke;
+    font-family: sans-serif;
+    margin-left: 30px;
+    padding: 20px;
+    text-align: center;
+    font-size: 20px;
+    flex-direction: row;
+    flex-wrap: nowrap;
+}
+
+.block-1 {
+    background: whitesmoke;
+    max-width: 500px;
+    min-width: 300px;
+    height: 100%;
+
+}
+
+.game-window {
+    width: 1024px;
+    height: 600px;
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    padding: 1px 1px;
+    background: darkslategray;
+    border: 2px solid #151522;
+   
+}
+
+iframe {
+    width: 100%;
+    height: 100%;
+    justify-content: center;
 }
