--- a/css/jggl_hub.css
+++ b/css/jggl_hub.css
@@ -1,12 +1,12 @@
+
+
 .topbar-hub {
    background-color: rgb(15, 8, 19);
    width: 100%;
    height: 60px;
    padding: 0px;
-   margin: 0px;
-   
-  
-   
+   margin: 0px;  
+   position: fixed;
 }
 
 .logo-hub {
@@ -22,6 +22,8 @@
     margin-left: 15px;
     margin-top: 0px;
     margin-right: 20px;
+    margin-bottom: 20px;
+    padding: 0;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 30px;
     color: white;
@@ -29,8 +31,8 @@
 }
 
 .body-hub {
-    background-color: rgb(178, 182, 141);
-    padding: 0px;
+    background-color: rgb(56, 44, 65);
+    padding-top: 1px;
     margin: 0px;
     display: block;
 }
@@ -45,6 +47,9 @@ a:hover {
 }
 
 .topbar-shadow {
+    position: fixed;
+    display: block;
+    margin-top: 60px;
     width: 100%;
     height: 10px;
     background: linear-gradient(rgb(10, 4, 15), rgba(15, 8, 19, 0.7), rgba(15, 8, 19, 0.2), rgba(15, 8, 19, 0.01));
@@ -54,10 +59,10 @@ a:hover {
     display: inline-flex;
     color: whitesmoke;
     font-family: sans-serif;
-    margin-left: 30px;
+    margin-left: 20px;
     padding: 20px;
     text-align: center;
-    font-size: 20px;
+    font-size: 1.2rem;
     flex-direction: row;
     flex-wrap: nowrap;
 }
@@ -71,11 +76,11 @@ a:hover {
 }
 
 .game-window {
-    width: 1024px;
-    height: 600px;
+    width: 924px;
+    height: 500px;
     margin-left: 20px;
     margin-right: 20px;
-    margin-top: 20px;
+    margin-top: 100px;
     margin-bottom: 20px;
     padding: 1px 1px;
     background: darkslategray;
