--- a/css/jggl_hub.css
+++ b/css/jggl_hub.css
@@ -82,9 +82,8 @@ a:hover {
     margin-right: 20px;
     margin-top: 100px;
     margin-bottom: 20px;
-    padding: 1px 1px;
+    padding: 0px;
     background: darkslategray;
-    border: 2px solid #151522;
    
 }
 
@@ -92,4 +91,8 @@ iframe {
     width: 100%;
     height: 100%;
     justify-content: center;
+    padding: 0;
+    margin: 0;
+    border: 6px solid #1a0f27;
+    border-radius: 6px;
 }
